testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment.errors.txt
a.js(4,7): error TS2339: Property 'Inner' does not exist on type 'typeof O'.


==== a.js (1 errors) ====
    var Outer = class O {
        m(x, y) { }
    }
    Outer.Inner = class I {
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type 'typeof O'.
        n(a, b) { }
    
    }
    /** @type {Outer} */
    var si
    si.m
    /** @type {Outer.Inner} */
    var oi
    oi.n
    
    